<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleEnter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circe_bold"
                android:text="@string/create_you_profile"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/epnEnterField"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/register_edittext_enable"
                    android:ems="10"
                    android:fontFamily="@font/circe"
                    android:hint="@string/fieldName"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/secondNameField"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/register_edittext_enable"
                    android:ems="10"
                    android:fontFamily="@font/circe"
                    android:hint="@string/SecondName"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/emailField"
                    style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/register_edittext_enable"
                    android:ems="10"
                    android:fontFamily="@font/circe"
                    android:hint="@string/email_field"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/passwordEnterField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/register_edittext_enable"
                    android:ems="10"
                    android:fontFamily="@font/circe"
                    android:hint="@string/phone_field"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/hint_color" />

                <EditText
                    android:id="@+id/passwordField"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/register_edittext_enable"
                    android:ems="10"
                    android:fontFamily="@font/circe"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColorHint="@color/hint_color" />

            </LinearLayout>

            <Button
                android:id="@+id/createButton"
                style="@style/circle_button"
                android:layout_width="231dp"
                android:layout_height="43dp"
                android:layout_gravity="clip_horizontal|center_horizontal"
                android:layout_marginTop="30dp"
                android:freezesText="true"
                android:gravity="clip_vertical|center_horizontal"
                android:text="@string/create"
                android:textAlignment="inherit" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/circe_bold"
                    android:gravity="end"
                    android:text="@string/have_profile"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/enterText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/circe_bold"
                    android:text="@string/you_enter"
                    android:textColor="@color/indicator"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>