<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titleEnter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/circe_bold"
            android:text="@string/enter_your_profile"
            android:textColor="@color/black"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/epnEnterField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/register_edittext_enable"
                android:ems="10"
                android:fontFamily="@font/circe"
                android:hint="@string/enter_your_email"
                android:inputType="textPersonName|textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/hint_color" />


            <EditText
                android:id="@+id/passwordEnterField"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/register_edittext_enable"
                android:ems="10"
                android:fontFamily="@font/circe"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColorHint="@color/hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="1dp" />


        </LinearLayout>

        <Button
            android:id="@+id/enterButton"
            style="@style/circle_button"
            android:layout_width="231dp"
            android:layout_height="43dp"
            android:layout_gravity="clip_horizontal|center_horizontal"
            android:layout_marginTop="30dp"
            android:freezesText="true"
            android:gravity="clip_vertical|center_horizontal"
            android:text="@string/enter"
            android:textAlignment="inherit" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/circe_bold"
                android:gravity="end"
                android:text="@string/no_accaunt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/registerText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/circe_bold"
                android:text="@string/registration"
                android:textColor="@color/indicator"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/google_login" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/vk_login" />
        </LinearLayout>

        <TextView
            android:id="@+id/forgotText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/circe_bold"
            android:gravity="center_horizontal"
            android:text="@string/forgot_your_password"
            android:textColor="@color/indicator"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:foregroundGravity="center" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
